<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_home">


    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        app:fillColor="#FFFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_bestevent"
        app:pageColor="#00000000"
        app:radius="6dp"
        app:slideInterval="3000"
        app:strokeColor="#FF777777"
        app:strokeWidth="1dp" />

    <ImageButton
        android:id="@+id/bt_music"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:onClick="musik"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.874"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carouselView"
        app:layout_constraintVertical_bias="0.131"
        app:srcCompat="@drawable/ic_music" />

    <TextView
        android:id="@+id/text_allev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allev_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_allev"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_music"
        app:layout_constraintVertical_bias="0.01" />

    <ImageButton
        android:id="@+id/bt_edu"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:onClick="education"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_allev"
        app:layout_constraintVertical_bias="0.243"
        app:srcCompat="@drawable/ic_edu" />

    <ImageButton
        android:id="@+id/bt_art"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:onClick="exh"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_music"
        app:layout_constraintVertical_bias="0.232"
        app:srcCompat="@drawable/ic_art" />

    <TextView
        android:id="@+id/text_edu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edu_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_edu"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/text_Art"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/art_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_art"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/text_eventforyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_eventforyou"
        android:textColor="@color/orange"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/text_bestevent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_bestevent"
        android:textColor="#393939"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_eventforyou"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/bt_allev"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        android:onClick="allevent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carouselView"
        app:layout_constraintVertical_bias="0.132"
        app:srcCompat="@drawable/ic_allev" />

    <ImageView
        android:id="@+id/image_bartop2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />


<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/BottomNav"-->
<!--        android:layout_width="408dp"-->
<!--        android:layout_height="80dp"-->
<!--        android:background="@drawable/ic_fragment"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.996"-->
<!--        app:menu="@menu/menu" />-->
</androidx.constraintlayout.widget.ConstraintLayout>