<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailEvent">

    <View
        android:id="@+id/view_popup1"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="#D3D1D1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/going_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/going_popup"
        android:textColor="#1A1A1A"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view_popup1"
        app:layout_constraintEnd_toEndOf="@+id/view_popup1"
        app:layout_constraintStart_toStartOf="@+id/view_popup1"
        app:layout_constraintTop_toTopOf="@+id/view_popup1" />

    <ImageButton
        android:id="@+id/bt_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ButtonYes"
        app:layout_constraintBottom_toBottomOf="@+id/view_popup1"
        app:layout_constraintEnd_toEndOf="@+id/view_popup1"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="@+id/view_popup1"
        app:layout_constraintTop_toTopOf="@+id/view_popup1"
        app:layout_constraintVertical_bias="0.903"
        app:srcCompat="@drawable/ic_yesno" />

    <ImageButton
        android:id="@+id/bt_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="207dp"
        android:layout_marginBottom="22dp"
        android:onClick="ButtonNo"
        app:layout_constraintBottom_toBottomOf="@+id/view_popup1"
        app:layout_constraintEnd_toEndOf="@+id/view_popup1"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toStartOf="@+id/view_popup1"
        app:layout_constraintTop_toTopOf="@+id/view_popup1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_yesno" />

    <TextView
        android:id="@+id/text_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bt_yes"
        app:layout_constraintEnd_toEndOf="@+id/bt_yes"
        app:layout_constraintStart_toStartOf="@+id/bt_yes"
        app:layout_constraintTop_toTopOf="@+id/bt_yes" />

    <TextView
        android:id="@+id/text_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bt_no"
        app:layout_constraintEnd_toEndOf="@+id/bt_no"
        app:layout_constraintStart_toStartOf="@+id/bt_no"
        app:layout_constraintTop_toTopOf="@+id/bt_no"/>

    <ImageView
        android:id="@+id/image_event3a"
        android:layout_width="114dp"
        android:layout_height="109dp"
        android:src="@drawable/ic_loginpic"
        app:layout_constraintBottom_toBottomOf="@+id/view_popup1"
        app:layout_constraintEnd_toEndOf="@+id/view_popup1"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/view_popup1"
        app:layout_constraintTop_toTopOf="@+id/view_popup1"
        app:layout_constraintVertical_bias="0.047" />

</androidx.constraintlayout.widget.ConstraintLayout>